--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gsap": "^3.11.3",
     "next": "13.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "split-type": "^0.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
